adding get by id route and adding ddd to fix datetime problem
