# app/Http/Controllers/ProductController.php
@@ -3,9 +3,16 @@
 namespace App\Http\Controllers;
 
 use App\Models\Product;
-
+use App\Infrastructure\Product\ProductRepository;
 class ProductController extends Controller
 {
+    private ProductRepository $productRepository;
+
+    public function __construct(ProductRepository $productRepository)
+    {
+        $this->productRepository = $productRepository;
+    }
+
     /**
      * @OA\Get(
      *     path="/products",
@@ -32,6 +39,32 @@ class ProductController extends Controller
      * )
      */
     public function index(){
-        return Product::paginate(request('per_page', 100));
+        $perPage = request('per_page', 100);
+        $page = request('page', 1);
+        $products = $this->productRepository->findAllPaginated($page, $perPage);
+        return response()->json($products);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/products/{code}",
+     *     summary="Exibe um produto específico",
+     *     tags={"Produtos"},
+     *     @OA\Parameter(
+     *         name="code",
+     *         in="path",
+     *         description="Código do produto",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Produto retornado com sucesso"
+     *     )
+     * )
+     */
+    public function show(int $code){
+        $product = $this->productRepository->findByCode($code);
+        return response()->json($product);
     }
 }
