# routes/api.php
@@ -4,3 +4,4 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ProductController;
 
 Route::get('/products', [ProductController::class, 'index']);
+Route::get('/products/{code}', [ProductController::class, 'show']);
