# storage/api-docs/api-docs.json
@@ -6,13 +6,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/products": {
+        "/api/products": {
             "get": {
                 "tags": [
                     "Produtos"
                 ],
                 "summary": "Lista todos os produtos",
-                "operationId": "c1ff6f862214e1896c59cfe0491ce0e8",
+                "operationId": "1bfaa78d1c2c3848ab8165c5dadcad3e",
                 "parameters": [
                     {
                         "name": "page",
@@ -38,6 +38,31 @@
                 "responses": {
                     "200": {
                         "description": "Lista de produtos retornada com sucesso"
+                    }
+                }
+            }
+        },
+        "/api/products/{code}": {
+            "get": {
+                "tags": [
+                    "Produtos"
+                ],
+                "summary": "Exibe um produto específico",
+                "operationId": "d3deebb6679ed9b4ecd1c3af94736c15",
+                "parameters": [
+                    {
+                        "name": "code",
+                        "in": "path",
+                        "description": "Código do produto",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Produto retornado com sucesso"
                     }
                 }
             }
